@@ -57,7 +57,7 @@
     dispatch_queue_t queue;
     ZBarImage *image;
     ZBarCVImage *result;
-    int32_t running;
+    volatile uint32_t state;
     int framecnt;
     unsigned width, height;
     uint64_t t_frame, t_fps, t_scan;
@@ -75,6 +75,10 @@
 
 // clear the internal result cache
 - (void) flushCache;
+
+// capture the next frame after processing.  the captured image will
+// follow the same delegate path as an image with decoded symbols.
+- (void) captureFrame;
 
 // the capture output.  add this to an instance of AVCaptureSession
 @property (nonatomic, readonly) AVCaptureOutput *captureOutput;
